--- a/index.html
+++ b/index.html
@@ -6,33 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="assets/css/style.js"></script>
     <script src="assets/js/script.js"></script>
-    <style>
-        /* Snap scroll */
-        html {
-            scroll-snap-type: y mandatory;
-            scroll-behavior: smooth;
-        }
-
-        .active {
-            background-color: red;
-        }
-
-        footer {
-            position: relative;
-            z-index: 10;
-        }
-
-        :root::-webkit-scrollbar {
-            display: none;
-        }
-
-        :root {
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-        }
-
-        
-    </style>
+    <link rel="stylesheet" href="assets/css/main.css">nk
 </head>
 
 <title>Banteng Clan</title>
@@ -151,20 +125,40 @@
             <h2 class="text-[3vw] mb-[3vh]">Projects</h2>
         </section>
 
-        <section id="contact" class="h-[80vh] snap-center flex items-center justify-center flex-col justify-center">
+        <section id="contact" class="h-[80vh] snap-center flex items-center flex-col space-y-2">
             <h2 class="text-[3vw] mb-[3vh]">Contact</h2>
+
+            <div class="h-[30%]">
+                <h3 class="text-5xl">a,a</h3>
+            </div>
+
+            <div class="w-[80%] h-[50%] p-2 flex space-x-2">
+                <!-- Basecamp section -->
+                <div class="w-1/3 flex items-center justify-center">
+                    <div class="text-center">
+                        <h3 class="text-4xl font-semibold">Basecamp</h3>
+                    </div>
+                </div>
+
+                <!-- Map section -->
+                <div class="w-full h-full overflow-hidden">
+                    <div id="my-map-display" class="w-full h-full">
+                        <iframe class="w-full h-full"
+                            src="https://www.google.com/maps/embed/v1/search?q=++Tempat+mantan+tobrut&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </section>
+
     </main>
 
     <footer id="footer" class="h-[10vh] bg-black text-white py-[3vh] text-center">
-        <p class="text-[2vh]">&copy; 2025 Banteng Clan. All rights reserved.</p>
+        <p class="text-[2vh]">2019 - <span id="current-year"></span> Banteng Clan</p>
+        <script>
+            document.getElementById('current-year').textContent = new Date().getFullYear();
+        </script>
     </footer>
-
-    <script>
-        document.getElementById("menuToggle").addEventListener("click", function () {
-            document.getElementById("mobileMenu").classList.toggle("hidden");
-        });
-    </script>
 </body>
 
 
