feat: Home + Developer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="assets/css/style.js"></script>
     <script src="assets/js/script.js"></script>
-    <link rel="stylesheet" href="assets/css/main.css">nk
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <title>Banteng Clan</title>
@@ -39,7 +39,8 @@
 
     <main class="snap-y snap-mandatory flex-grow overflow-y-clip">
         <section id="home" class="h-[100vh] snap-center flex items-center justify-center flex-col justify-center">
-            <h2 class="text-[3vw] mb-[3vh]">home</h2>
+            <h3 class="text-[3vw] mb-[3vh]"> Siapa Kami ?</h3>
+            <p class="text-[2vw]">Cuma kumpulan bocah sekolah gabut dengan jiwa membanteng</p>
         </section>
         <section id="member" class="h-[100vh] snap-center flex flex-col items-center justify-center">
             <h2 class="text-[3vw] mb-[3vh]">Member</h2>
@@ -118,7 +119,24 @@
         </section>
 
         <section id="developer" class="h-[100vh] snap-center flex items-center justify-center flex-col justify-center">
-            <h2 class="text-[3vw] mb-[3vh]">Developer</h2>
+            <h2 class="text-[2vw] mb-[3vh]">Tukang ngoding di grup</h2>
+                <div class="grid w-[90vw] gap-[3vw] px-[3vw] grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3">
+                    <div class="flex flex-col items-center">
+                        <img src="/assets/images/fik.jpg" alt="Member 1"
+                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                        <p class="text-[1.5vw]">Mas Fik</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <img src="/assets/images/yog.jpg" alt="Member 4"
+                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                        <p class="text-[1.5vw]">Yog</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <img src="/assets/images/sarip.jpg" alt="Member 5"
+                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                        <p class="text-[1.5vw]">Sarip</p>
+                    </div>
+                </div>
         </section>
 
         <section id="projects" class="h-[100vh] snap-center flex items-center justify-center flex-col justify-center">
