--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
 
                             <img class="w-full h-[35vh] aspect-video rounded-lg object-cover"
                                 src="/assets/images/kegiatan/gacoan5.jpg" alt="Kegiatan 11">
+
+                            <img class="w-full h-[35vh] aspect-video rounded-lg object-cover"
+                                src="/assets/images/kegiatan/lokapala.jpg" alt="Kegiatan 12">
+                            <img class="w-full h-[35vh] aspect-video rounded-lg object-cover"
+                                src="/assets/images/kegiatan/bakaran.jpg" alt="Kegiatan 13">
                         </div>
                     </div>
 
@@ -120,23 +125,20 @@
 
         <section id="developer" class="h-[100vh] snap-center flex items-center justify-center flex-col justify-center">
             <h2 class="text-[2vw] mb-[3vh]">Tukang ngoding di grup</h2>
-                <div class="grid w-[90vw] gap-[3vw] px-[3vw] grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3">
-                    <div class="flex flex-col items-center">
-                        <img src="/assets/images/fik.jpg" alt="Member 1"
-                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
-                        <p class="text-[1.5vw]">Mas Fik</p>
-                    </div>
-                    <div class="flex flex-col items-center">
-                        <img src="/assets/images/yog.jpg" alt="Member 4"
-                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
-                        <p class="text-[1.5vw]">Yog</p>
-                    </div>
-                    <div class="flex flex-col items-center">
-                        <img src="/assets/images/sarip.jpg" alt="Member 5"
-                            class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
-                        <p class="text-[1.5vw]">Sarip</p>
-                    </div>
+            <div class="grid w-[90vw] gap-[3vw] px-[3vw] grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3">
+                <div class="flex flex-col items-center">
+                    <img src="/assets/images/fik.jpg" alt="Member 1" class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                    <p class="text-[1.5vw]">Mas Fik</p>
                 </div>
+                <div class="flex flex-col items-center">
+                    <img src="/assets/images/yog.jpg" alt="Member 4" class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                    <p class="text-[1.5vw]">Yog</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="/assets/images/sarip.jpg" alt="Member 5" class="w-[15vw] h-[15vw] rounded-full mb-[1vh]">
+                    <p class="text-[1.5vw]">Sarip</p>
+                </div>
+            </div>
         </section>
 
         <section id="projects" class="h-[100vh] snap-center flex items-center justify-center flex-col justify-center">
