--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
 
                             <img class="w-full h-[35vh] aspect-video rounded-lg object-cover"
                                 src="/assets/images/kegiatan/lokapala.jpg" alt="Kegiatan 12">
+                        </div>
+                        <!--Slides 3-->
+                        <div class="carousel-item grid grid-cols-3 gap-4 w-full min-w-full">
                             <img class="w-full h-[35vh] aspect-video rounded-lg object-cover"
                                 src="/assets/images/kegiatan/bakaran.jpg" alt="Kegiatan 13">
                         </div>
